--- a/CVC-workshop/planning-notes.Rmd
+++ b/CVC-workshop/planning-notes.Rmd
@@ -1,5 +1,9 @@
 # Notes on CVC Workshop
 
+## May 21, 2014
+
+Have a session where faculty report on books.  Everybody gets two books and is asked to compare them.  All the people with a given book will report on what they liked and didn't like.
+
 ## Feb 6, 2014
 
 Met with Paul O. and Libby S. to plan a little for workshop.
